--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser=chrome
-url=https://trycloud.net
+url=http://qa.trycloud.net/index.php/login
 username1=User18
 username2=User18
 username3=User48
