--- a/configuration.properties
+++ b/configuration.properties
@@ -1,5 +1,5 @@
 browser = chrome
-url = http://qa.trycloud.net/index.php/login?clear=1
+url = http://qa3.trycloud.net
 username1 = User18
 username2 = User48
 username3 = User78
