configuration.properties folder has been updated to qa3

--- a/configuration.properties
+++ b/configuration.properties
@@ -1,8 +1,9 @@
 browser=chrome
-url=http://trycloud.net
+url=http://qa3.trycloud.net
 username1=User18
 username2=User48
 username3=User78
 username4=User108
 password=Userpass123
+
 
